--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@rsi/core": "https://github.com/wzr1337/rsi.core#develop",
+    "@rsi/core": "https://github.com/wzr1337/rsi.core#0.2.7",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cors": "^2.8.3",
